--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@azure/msal-browser": "^4.21.1",
     "@azure/msal-react": "^3.0.19",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
